May-2025/centos-pod-nobody-v1.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: centos-pod-nobody-v1
spec:
  securityContext:
    runAsUser: 65534
    runAsGroup: 65534
  containers:
    - name: centos
      image: quay.io/centos/centos:stream9
      command: ["sleep", "3600"]
