May-2025/centos-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: centos-pod
spec:
  containers:
  - name: centos
    image: centos
    command: ["/bin/bash", "-c", "sleep 3600"]
