May-2025/default-psp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secure-centos
  labels:
    app: secure-centos
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: centos
    image: quay.io/centos/centos:stream9
    command: ["sleep", "3600"]
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      readOnlyRootFilesystem: false
