May-2025/fortune-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-pod  
  labels:
    app: fortune-pod
spec:
  containers:
  - image: centos:7
    name: html-generator 
    stdin: true 
    tty: true
    volumeMounts:
    - name: html-volume 
      mountPath: /html
  - image: nginx 
    name: nginx 
    volumeMounts:
    - name: html-volume
      mountPath: /usr/share/nginx/html 
      readOnly: true
    ports:
    - containerPort: 80
      name: http 
      protocol: TCP
  volumes:
  - name: html-volume 
    emptyDir: {}
