May-2025/kuard-pod-hostpath.yaml
apiVersion: v1
kind: Pod 
metadata:
  labels:
    app: kuard-pod-hostpath
  name: kuard-pod-hostpath
spec:
  volumes:
  - name: "kuard-data" 
    hostPath:
      path: "/app-data"
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:blue
    name: kuard 
    volumeMounts:
    - mountPath: "/data" 
      name: "kuard-data"
    ports:
    - containerPort: 8080
      name: http 
      protocol: TCP
