May-2025/kuard-pod-lp-enabled.yaml
apiVersion: v1
kind: Pod 
metadata:
  labels:
    app: kuard-pod-lp-enabled
  name: kuard-pod-1p-enabled
speg:
  containers:
  - image: gcr. io/kuar-demo/kuard-amd64:1
    name: kuard 
    livenessProbe:
      httpGet :
        path: /healthy 
        port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 10
      failureThreshold: 3
    ports:
    - containerPort: 8080
      name: http 
      protocol: TCP
