May-2025/myapp-v1-pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  labels:
    app: myapp-v1-pod
  name: myapp-v1-pod
spec:
  containers:
  - image: gcr. io/kuar-demo/kuard-amd64:1
    name: kuard 
    resources:
      requests:
        chu: "500m" # 0.5 CPU Core 
        memory: "128Mi" # 128MB
    ports:
    - containerPort: 8080
      name: http 
      protocol: TCP
