May-2025/nginx-configmap-pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: nginx-configmap-pod
  labels:
    app: nginx-configmap-pod
spec:
  containers:
  - name: nginx 
    image: nginx 
    volumeMounts:
    - name: config-volume 
      mountPath: /my.conf 
      subPath: nginx-proxy.conf
  volumes:
  - name: config-volume 
    configMap:
      name: nginx-config
