May-2025/layer7-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: layer7-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: test-service1
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: test-service2
            port:
              number: 80
