May-2025/default-allow-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: default-allow-netpol 
spec:
  podSelector: {} 
  policyTypes:
  - Ingress
  ingress:
  - {}
