May-2025/default-deny-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: default-deny-netpol
spec:
  podSelector: {} 
  policyTypes:
    - Ingress
