May-2025/qa-allow-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: ga-allow-netpol
spec:
  podSelector: 
    matchLabels:
      env: ga
  ingress:
  - from:
    - podSelector: 
        matchLabels:
          env: qa
