May-2025/test-allow-80-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: test-allow-80-netpol
spec:
  podSelector: 
    matchLabels:
      env: ga
  ingress:
  - from:
    - podSelector: 
        matchLabels:
          env: test
    ports:
    - protocol: TCP
      port: 80
