May-2025/test-ns-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: test-ns-netpol
spec:
  podSelector: 
    matchLabels:
      env: ga
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          env: dev-johns
